# phase_fw

./: .envrc  .gitignore  README.md  README.org
CW/: 50-newae.rules  Dockerfile  Dockerfile.jupyter  Makefile  notes.md  run.sh  shell_env.sh
CW/tagrets/STM32F1/: .gitignore  Makefile
CW/tagrets/STM32F1/src/: main.c
CW/work/: backward_trig.py
STM32F1/: .gitignore  Makefile
STM32F1/src/: main.c  main.h
STM32L1/: .gitignore  Makefile
STM32L1/src/: main.c  main.h  stm32l1xx_it.c  stm32l1xx_it.h
arduino_nano/: README.org
arduino_nano/ARL/: Makefile
arduino_nano/ARL/src/cores/arduino/: USBCore.cpp
arduino_nano/aesonly-poc/: Makefile
arduino_nano/aesonly-poc/src/: aes.h  main.cpp
nrf51422/: README.org
nrf51422/sc-poc/: main.c
nrf51422/sc-poc/pca10028/armgcc/: Makefile
nrf52832/: .gitignore  README.org
nrf52832/sc-poc/: main.c
nrf52832/sc-poc/pca10040/blank/armgcc/: Makefile
pico/: README.org
pico/aesonly-poc/: CMakeLists.txt  aesonly-poc.uf2  main.c
